@@ -1,3 +1,7 @@
+2019-01-24  Mark Wielaard  <mark@klomp.org>
+
+	* strip.c (handle_elf): Fix check test for SHN_XINDEX symbol.
+
 2019-01-22  Mark Wielaard  <mark@klomp.org>
 
 	* readelf.c (print_debug_line_section): Check we are not at end of
